<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calendar for BMSTU</string>
    <string name="action_settings">Settings</string>
    <string name="your_choice">Ваш выбор</string>
    <string name="do_imort">Импортировать</string>
	
    <string name="calendar_name">Расписание МГТУ</string>
    
    <string name="lecture">Лекция</string>
    <string name="seminar">Семинар</string>
    <string name="laboratory">Лабораторная работа</string>
    
    <string name="teacher">Преподаватель</string>
    <string name="auditorium">Аудитория</string>
    <string name="groups">Группы</string>
    
    <string name="pref_sound">Звук во время занятий</string>
    <string name="pref_sound_summary">Выберите звуковой режим телефона во время проведения занятий.</string>
    <string name="settings_schedule">Расписание</string>
    <string name="settings_scheduleSummary">Настройте работу с расписанием в соответствии со своими вкусами и предпочтениями</string>
    <string name="pref_alarm">Будить перед парами? (функция в разработке)</string>
    <string name="pref_alarmOn">Рота подъём!</string>
    <string name="pref_alarmOff">Не будить до весны</string>
    <string name="prefPairNoAlarm">Не будить к паре номер&#8230;</string>
    <string name="prefPairNoAlarmSummary">К какой паре не надо заводить будильник?</string>
    <string name="prefAlarmTime">Время пробуждения</string>
    <string name="prefAlarmTimeSummary">За сколько часов до занятий прикажете будить?</string>
    <string name="prefAlarmSound">Звук будильника</string>
    <string name="prefAlarmSoundSummary">Выберите звук для пробуждения перед занятиями</string>
    
    <string name="weekTimetable">Расписание на неделю</string>
    <string name="choose_group">Выберите группу</string>
    <string name="choose_faculty">Выберите факультет</string>
    
</resources>
